# solana_RWA

./: .gitignore  .vercelignore  README.md  ROADMAP.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
app/: globals.css  package.json  page.tsx
components/: NavBar.tsx  WalletProvider.tsx
hooks/: useMachines.ts  useSale.ts  useStaking.ts  useWalletData.ts
lib/: anchor.ts
public/: vend-metadata.json
scripts/: .vend-mint.json  airdrop-vend.ts  create-vend-token.ts  debug-balance.ts  emit-rewards.ts  fix-stake-vault.ts  fresh-setup.ts  fund-rewards.ts  fund-vault.ts  gen-vend-machine-idl.ts  gen-vend-sale-idl.ts  gen-vend-treasury-idl.ts  mint-initial-supply.ts  reinit-staking-pool.ts  reset-pool-price.ts  setup-machines.ts  setup-sale-vault.ts  supabase-schema.sql  transfer-mint-authority.ts  tsconfig.json  (+1 more)
vendchain-contracts/: Anchor.toml  Cargo.toml  package-lock.json  package.json
vendchain-contracts/programs/vend-machine/: Cargo.toml
vendchain-contracts/programs/vend-machine/src/: errors.rs  lib.rs  logic.rs  state.rs
vendchain-contracts/programs/vend-sale/: Cargo.toml
vendchain-contracts/programs/vend-sale/src/: lib.rs
vendchain-contracts/programs/vend-treasury/: Cargo.toml
vendchain-contracts/programs/vend-treasury/src/: errors.rs  lib.rs  logic.rs  state.rs
vendchain-contracts/programs/vendchain-contracts/: Cargo.toml
vendchain-contracts/programs/vendchain-contracts/src/: errors.rs  lib.rs  logic.rs  state.rs
vendchain-contracts/tests/: vend-machine.ts  vend-sale.ts  vend-treasury.ts  vendchain-contracts.ts
(+16 files in other folders)
