[workspace]
members = [
    "programs/vendchain-contracts",
    "programs/vend-machine",
    "programs/vend-treasury",
    "programs/vend-sale"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
